--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,15 @@
 @import "tailwindcss";
+
+::-webkit-scrollbar{
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-track
+{
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: #6c6c6c;
+}
