--- a/frontend/src/Template/Popup/popup.css
+++ b/frontend/src/Template/Popup/popup.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #00000080;
   backdrop-filter: blur(2px);
   display: flex;
   justify-content: center;
